fix: Avatars too large on notifications page (#35023)

--- a/app/javascript/styles/mastodon/components.scss
+++ b/app/javascript/styles/mastodon/components.scss
@@ -1980,6 +1980,13 @@ body > [data-popper-placement] {
     }
   }
 
+  &__avatar-wrapper .account__avatar {
+    @container (width < 360px) {
+      width: 35px !important;
+      height: 35px !important;
+    }
+  }
+
   &__domain-pill {
     display: inline-flex;
     background: rgba($highlight-text-color, 0.2);
@@ -2150,11 +2157,6 @@ body > [data-popper-placement] {
   position: relative;
   border-radius: var(--avatar-border-radius);
   background: var(--surface-background-color);
-
-  @container (width < 360px) {
-    width: 35px !important;
-    height: 35px !important;
-  }
 
   img {
     width: 100%;
